Bug 93895 - Problem with AutoCalculate when pasting data from non-adjacent cells
Summary: Problem with AutoCalculate when pasting data from non-adjacent cells
Status: RESOLVED FIXED
Alias: None
Product: LibreOffice
Classification: Unclassified
Component: Calc (show other bugs)
Version:
(earliest affected)
4.4.5.2 release
Hardware: x86-64 (AMD64) Linux (All)
: medium normal
Assignee: Eike Rathke (retired, only occasionally showing up)
URL:
Whiteboard: target:5.1.0 target:5.0.3 target:4.4.6
Keywords: regression
Depends on:
Blocks:
 
Reported: 2015-09-03 15:20 UTC by dhagen
Modified: 2016-10-25 19:24 UTC (History)
2 users (show)

See Also:
Crash report or crash signature:


Attachments
Spreadsheet that illustrates AutoCalculate problem (17.31 KB, application/vnd.oasis.opendocument.spreadsheet)
2015-09-03 15:20 UTC, dhagen
Details

Note You need to log in before you can comment on or make changes to this bug.
Description dhagen 2015-09-03 15:20:24 UTC
Created attachment 118396 [details]
Spreadsheet that illustrates AutoCalculate problem

Column sums do NOT automatically update when NON-adjacent cells (from elsewhere in the same sheet) are selected (using CTRL-click), copied, and pasted into the columns.  When ADJACENT cells are selected, copied, and pasted into the columns the sums DO update, as expected. A very simple spreadsheet is attached to illustrate this problem.  It was created from scratch in Calc 5.0.0.5.   

This problem started with version 4.4 and carries forward into 5.0.0.5.  The problem is not present in version 4.3, or in other spreadsheet programs (such as Excel).

In 4.4 a new option was added under Tools>Options>LibreOfficeCalc>General (under Input Settings). This option is called “Update references when sorting range of cells”. This would seem to be a likely culprit, although the behavior described above is unchanged regardless of which setting is chosen.

Finally, please note the following:
- AutoCalculate is turned on
- CTRL-SHFT F9 updates the column sums
- closing and re-loading the spreadsheet also updates the column sums

This is the first bug report that I have submitted.  I apologize in advance if the report is incomplete or otherwise flawed.

dhagen
Comment 1 m_a_riosv 2015-09-03 21:49:26 UTC
Hu @dhagen, thanks for reporting.

Report is fine and complete.

But I can't reproduce the issue, if I understand well.

- Copying G8:H8 with right-click into C9, updates the sum in C10:D10
- Copying G9:I9 with right-click into C9, updates the sum in C10 as must be.
- Copying G9 with right-click into C9, updates the sum in C10.
- Copying I9 with right-click into D9, updates the sum in D10.

Please try resetting the user profile, sometimes solves strange issues.
https://wiki.documentfoundation.org/UserProfile
Comment 2 dhagen 2015-09-04 08:25:34 UTC
I must not have explained this adequately.  None of the things you tried are related to the bug. For example, you tried:

- Copying G9:I9 with right-click into C9, updates the sum in C10 as must be.

But this is not the issue. If you copy G9:I9 then you are selecting three cells: G9, H9, and I9.  These are all adjacent cells.  The problem is when you copy two NON-adjacent cells. Please try the following:

(1) Left-click on G9, and then hold down the CTRL key and left-click on I9.  This will select these two non-adjacent cells.

(2) COPY the two selected cells using CTRL-C (or Edit>Copy)  

(3) Left click on C9 and PASTE using CTRL-V (or Edit>Paste)

This will paste the values from G9 and I9 into C9 and D9, so that the blank space in each column now contains a 1.  The sums in C10 and D10 should update, as the new sum is 3. But this does not occur.  It still shows the sum as 2.

Doing the steps listed above in Calc 4.3 will in fact update the sums, as expected. Microsoft Excel will also update the sums, as expected.  The failure to update the sums started with 4.4.

I tried resetting the user profile, but that does not help.  I also tried this on another machine, and found the same problem.  

Thanks for your assistance with this bug.
Comment 3 m_a_riosv 2015-09-05 02:56:30 UTC
Thanks for details.

I can reproduce now.

Last working for me:
Win10x64
Version:  4.3.7.2 Build Id:  48d50dbfc06349262c9d50868e5c1f630a573ebd

Reproducible with:
Win10x64
Version: 4.4.5.2 Build id: a22f674fd25a3b6f45bdebf25400ed2adff0ff99
Comment 4 Eike Rathke (retired, only occasionally showing up) 2015-09-14 14:46:15 UTC
(In reply to dhagen from comment #0)
> In 4.4 a new option was added under Tools>Options>LibreOfficeCalc>General
> (under Input Settings). This option is called “Update references when
> sorting range of cells”. This would seem to be a likely culprit, although
> the behavior described above is unchanged regardless of which setting is
> chosen.

That's nonsense, but I can reproduce the problem.
Comment 5 Commit Notification 2015-09-14 15:38:15 UTC
Eike Rathke committed a patch related to this issue.
It has been pushed to "master":

http://cgit.freedesktop.org/libreoffice/core/commit/?id=97ad6393525a928b5dfe2a6562d7604446da7af0

Resolves: tdf#93895 broadcast cell changes when multi-selection was pasted

It will be available in 5.1.0.

The patch should be included in the daily builds available at
http://dev-builds.libreoffice.org/daily/ in the next 24-48 hours. More
information about daily builds can be found at:
http://wiki.documentfoundation.org/Testing_Daily_Builds
Affected users are encouraged to test the fix and report feedback.
Comment 6 Eike Rathke (retired, only occasionally showing up) 2015-09-14 16:57:41 UTC
Pending review
https://gerrit.libreoffice.org/18573 for 5-0
https://gerrit.libreoffice.org/18575 for 4-4
Comment 7 Commit Notification 2015-09-17 07:18:21 UTC
Eike Rathke committed a patch related to this issue.
It has been pushed to "libreoffice-5-0":

http://cgit.freedesktop.org/libreoffice/core/commit/?id=50d4e7c928c372a14a5396971bc4c4ac1f437b51&h=libreoffice-5-0

Resolves: tdf#93895 broadcast cell changes when multi-selection was pasted

It will be available in 5.0.3.

The patch should be included in the daily builds available at
http://dev-builds.libreoffice.org/daily/ in the next 24-48 hours. More
information about daily builds can be found at:
http://wiki.documentfoundation.org/Testing_Daily_Builds
Affected users are encouraged to test the fix and report feedback.
Comment 8 Commit Notification 2015-09-17 08:08:15 UTC
Eike Rathke committed a patch related to this issue.
It has been pushed to "libreoffice-4-4":

http://cgit.freedesktop.org/libreoffice/core/commit/?id=dcc71bb4a282678a815eb894b52fd062ff0aa1c6&h=libreoffice-4-4

Resolves: tdf#93895 broadcast cell changes when multi-selection was pasted

It will be available in 4.4.6.

The patch should be included in the daily builds available at
http://dev-builds.libreoffice.org/daily/ in the next 24-48 hours. More
information about daily builds can be found at:
http://wiki.documentfoundation.org/Testing_Daily_Builds
Affected users are encouraged to test the fix and report feedback.
Comment 9 dhagen 2015-09-19 18:35:14 UTC
I tested the patched versions from the daily builds (both 4.4 and 5.0 64-bit) and the bug has in fact been fixed. Many thanks to Eike Rathke for the patch!

The specific builds I tested were as follows:
libreoffice-4-4~2015-09-18_13.00.01_LibreOfficeDev_4.4.6.0.0_Linux_x86-64
libreoffice-5-0~2015-09-18_11.42.55_LibreOfficeDev_5.0.3.0.0_Linux_x86-64

This was my first experience with submitting a bug. I am very impressed with the process, which resulted in a timely and effective fix. Thanks to all who helped out.