Resolves: tdf#93895 broadcast cell changes when multi-selection was pasted

It is not sufficient to collect the cells, one has to broadcast on the
collection.

Change-Id: I11f889936aff43f958c56789e539809289819752